--- a/ChatBot/package.json
+++ b/ChatBot/package.json
@@ -1,7 +1,6 @@
 {
   "name": "chatbot",
   "version": "1.0.0",
-  "description": "",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,7 @@
     "express": "^4.18.2",
     "openai": "^4.4.0",
     "tiktoken": "^1.0.10"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
